WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
57295
ES5 Strict mode does not allow getter and setter for same propId
https://bugs.webkit.org/show_bug.cgi?id=57295
Summary
ES5 Strict mode does not allow getter and setter for same propId
Ryan Berdeen
Reported
2011-03-28 20:08:26 PDT
In strict mode, an object literal with a getter and setter for the same property will cause WebKit to raise a syntax error. This should be valid, but raises a syntax error due to the presence of the setter: 'use strict'; var o = { get x () {}, set x () {} }; Changing the property name for either getter or setter will eliminate the syntax error. This behavior does not seem to follow §11.1.5.
Attachments
Patch
(4.78 KB, patch)
2011-05-01 21:47 PDT
,
Oliver Hunt
barraclough
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Oliver Hunt
Comment 1
2011-05-01 20:00:26 PDT
Whoops, I think i left in a piece of code from when i was debugging. Need to verify but the fix is trivial. Please CC me on any other strict mode bugs that you find.
Oliver Hunt
Comment 2
2011-05-01 21:47:56 PDT
Created
attachment 91879
[details]
Patch
Oliver Hunt
Comment 3
2011-05-01 21:52:10 PDT
Committed
r85455
: <
http://trac.webkit.org/changeset/85455
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug