2011-05-01  Oliver Hunt  <oliver@apple.com>

Reviewed by Gavin Barraclough.

        ES5 Strict mode does not allow getter and setter for same propId
        https://bugs.webkit.org/show_bug.cgi?id=57295

        Update for correct results

        * fast/js/mozilla/strict/11.1.5-expected.txt:
2011-05-01  Oliver Hunt  <oliver@apple.com>

        Reviewed by Gavin Barraclough.

        ES5 Strict mode does not allow getter and setter for same propId
        https://bugs.webkit.org/show_bug.cgi?id=57295

        Simplify and correct the logic for strict mode object literals.

        * parser/JSParser.cpp:
        (JSC::JSParser::parseStrictObjectLiteral):

Canonical link: https://commits.webkit.org/75160@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@85455 268f45cc-cd09-0410-ab3c-d52691b4dbfc